Added gallery section

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -37,3 +37,30 @@
   font-weight: 400;
 }
 
+@font-face {
+  font-family: Lato-Regular;
+  src: url('../public/fonts/Lato-Regular.ttf');
+  font-style: normal;
+  font-weight: 400;
+}
+
+@font-face {
+  font-family: Lato-Italic;
+  src: url('../public/fonts/Lato-Italic.ttf');
+  font-style: normal;
+  font-weight: 400;
+}
+
+@font-face {
+  font-family: Lato-Bold-Italic;
+  src: url('../public/fonts/Lato-BoldItalic.ttf');
+  font-style: normal;
+  font-weight: 400;
+}
+
+@font-face {
+  font-family: Lato-Bold;
+  src: url('../public/fonts/Lato-Bold.ttf');
+  font-style: normal;
+  font-weight: 400;
+}
